# roguelike-map-generator-api

./: .gitignore  game.json  main.py  pyproject.toml  requirements.txt  tile.py  vector_db.py
chroma_tiles_db/85db9241-8ffd-4de0-98a0-23f507e61a56/: index_metadata.pickle
other/: database.db.bk  scratch.ipynb
src/: api.py  asset_generator.py  assets_generator.py  config.py  database.db  db.py  game.json  llm_models.py  map.json  map_generator.py  prompts.py  query_str.py  reconstruction.txt  scratch.py  tile.py  tiles_description.csv  utils.py  vector_db.py
src/chroma_entities_db/: chroma.sqlite3
src/chroma_environments_db/: chroma.sqlite3
src/chroma_items_db/: chroma.sqlite3
src/models/: __init__.py  asset_buddle.py  char_representation.py  dungeon.py  enemies.py  entities.py  final_objective.py  items.py  levels.py  map.py  map_char_representation.py  player.py  textures.py  tiles.py  weapons.py
src/public/viewer/: index.html  index.js  style.css
src/saves/: char_tile_representation_list.pk  dark_souls_asset_bundle.pk  entities.pk  items.pk  map_char_representation.pk  textures.pk  tiles.pk
src/tests/: p_1_openai_gpt_oss_120b_assets.json  p_1_openai_gpt_oss_120b_metadata.json  p_1_openai_gpt_oss_120b_prompt_analyzer.txt  p_1_openai_gpt_oss_120b_prompt_reconstruction.txt
src/tiles_data/: entities_data.csv  entities_data.json  environment_data.csv  environment_data.json  items_data.csv  items_data.json
tiles_analyzer/: analyze_tileset.ipynb  tiles_description.csv  tiles_description.js  tiles_description.json  tiles_description_table.html
